--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
 	"setting": {
 		"urlCheck": false,
 		"es6": true,
-		"enhance": true,
+		"enhance": false,
 		"postcss": true,
 		"preloadBackgroundData": false,
 		"minified": true,
@@ -28,19 +28,20 @@
 		},
 		"useIsolateContext": true,
 		"useCompilerModule": true,
-		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.0",
-	"appid": "wx59816e87b39b9df2",
 	"appid": "wx5ef95d3ea2ab1e14",
 	"projectname": "storeWeChat",
+	"cloudfunctionTemplateRoot": "",
+	"watchOptions": {
+		"ignore": []
+	},
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
 	"scripts": {},
-	"isGameTourist": false,
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"condition": {
@@ -52,12 +53,10 @@
 			"current": -1,
 			"list": []
 		},
-		"game": {
 		"plugin": {
 			"current": -1,
 			"list": []
 		},
-		"plugin": {
 		"game": {
 			"current": -1,
 			"list": []
@@ -67,13 +66,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
 			"list": [
 				{
 					"id": -1,
 					"name": "商品列表",
 					"pathName": "pages/goods_list/goods_list",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "分类",
+					"pathName": "pages/category/category",
 					"scene": null
 				}
 			]
